# tgt_practice_full

./: .gitignore  docker-compose.yml
tgt_practice_backend/: .env  .env.sample  Dockerfile  auto-config.json  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
tgt_practice_backend/api/: admin.py  middleware.py  schema.py  views.py
tgt_practice_backend/api/graphql/: connections.py  conversion_utils.py  decorators.py  mutation.py  payloads.py  queries.py  types.py
tgt_practice_backend/api/graphql/inputs/: parameter.py  profile.py  tool_installed_sensor.py  tool_module.py  tool_module_group.py  tool_module_type.py  tool_sensor_type.py
tgt_practice_backend/api/migrations/: 0001_initial.py  0002_alter_toolmodule_image.py  0003_remove_toolmodule_dbtimage2d.py  0004_alter_toolmodule_dbversion.py  0005_alter_toolmodule_image.py  0006_remove_toolmodule_dbtcomp_str_and_more.py  0007_resourcestring_measure_unit_measureunit_and_more.py  0008_parametertype_conversionfactor_parameter.py  0009_profile.py  0010_rename_from_unit_id_conversionfactor_from_unit_and_more.py  0011_alter_measure_default_unit_alter_measureunit_measure_and_more.py  0012_alter_profile_language.py  0013_parametertype_default_measure_and_more.py
tgt_practice_backend/api/models/: __init__.py  sensor_models.py  tool_models.py  unit_system_models.py  user_models.py
tgt_practice_backend/nginx/: Dockerfile  default.conf
tgt_practice_backend/nginx/certificates/: 172.20.10.6.crt  device.key
tgt_practice_backend/tools_app/: asgi.py  settings.py  urls.py  wsgi.py
tgt_practice_frontend/: Dockerfile  (+5 more)
(+174 files in other folders)
