[tool.poetry]
name = "tgt-practice-backend"
version = "0.1.0"
description = "Dashboard for TGT Practice"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
black = "^24.4.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
graphene-django = "^3.2.1"
django-filter = "^24.2"
pillow = "^10.3.0"
django-graphql-jwt = "^0.4.0"
djorm-ext-pgbytea = "^0.6.0"
azure-identity = "^1.16.0"
msgraph-sdk = "^1.2.0"
identity = "^0.8.0"
msal = "^1.28.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
urllib3 = "^2.2.1"
spotipy = "^2.23.0"
localstorage = "^0.1.0"
graphdoc = "^0.4.0"
gunicorn = "^22.0.0"

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__"
]
extend-ignore = [
    "E501"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
